syntax = "proto3";

package go.micro.srv.sso;

service Sso {
	rpc Auth(AuthRequest) returns (AuthResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc Captcha(CaptchaRequest) returns (CaptchaResponse) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message AuthRequest {
	string username = 1;
	string password = 2;
}

message AuthResponse {
	string token = 1;
	int64 expire = 2;
}

message RegisterRequest {
	string username = 1;
	string password = 2;
	string captchaId = 3;
	string verify = 4;
}

message RegisterResponse {
	string username = 1;
	int64 status = 2;
}

message CaptchaRequest {
    string type = 1;
    int64 length = 2;
}

message CaptchaResponse {
    string id = 1;
    string data = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
